# rust-logger-decode

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.rs  tdf.json  tdf_decoder.rs.jinja  tdf_decoder_build.py
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
assets/: README.md
blocks/: Cargo.toml
blocks/src/: lib.rs
doc/: custom_tdfs.md
scripts/: package_macos_dmg.sh  tdf.json  tdf_decoder.rs.jinja  tdf_decoder_build.py  tdf_decoder_csv.rs.jinja  tdf_decoder_parquet.rs.jinja
src/: args.rs  fs_util.rs  lib.rs  main_cli.rs  main_gui.rs  output_common.rs  output_csv.rs  output_parquet.rs
tdf/: Cargo.toml
tdf/src/: decoders.rs  decoders_csv.rs  decoders_parquet.rs  lib.rs  time.rs
