[package]
name = "infuse_decoder"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "infuse_decoder_cli"
path = "src/main_cli.rs"

[[bin]]
name = "infuse_decoder"
path = "src/main_gui.rs"

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.38"
clap = { version = "4.5.13", features = ["derive"] }
eframe = "0.28.1"
indicatif = "0.17.8"
itertools = "0.13.0"
memmap = "0.7.0"
num_cpus = "1.16.0"
prettytable-rs = "0.10.0"
regex = "1.10.5"
rfd = "0.14.1"
tdf = { path = "tdf" }
blocks = { path = "blocks" }
egui_extras = "0.28.1"
directories = "5.0.1"
image = "0.25.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "*", features = ["winbase"] }
